Auto-update AMI on deploy & so also use deb packages and systemd (#179)
* Create deb artifact rather than a zip
* Use new version of sbt-native-packager
* Add CODE mappings to cloudformation, moved play app secret to be set in the
secret config, update launch configuration to expect deb packages
* upstart.conf no longer needed, and bootstrap and set-env scripts also removed
(using deb packages simplify them enough for to be sensibly moved into launch configuration)
* Add ami-update before deploy